# ReinforcementLearningByElisabeth

RLNodes/DoubleDQN/dqn_neu_2/: CMakeLists.txt  network_params.txt  package.xml  test_states.py
RLNodes/DoubleDQN/dqn_neu_2/Training/: Training_Network_0.h5  Training_Network_1.h5  Training_Network_2.h5  Training_Network_3.h5
RLNodes/DoubleDQN/dqn_neu_2/src/: Memory.py  Network.py  main.py  stats.py  test.py
RLNodes/SingleDQN/dqn_keras_1/src/: main.py  matrix.py  stats.py
RLNodes/SingleDQN/dqn_keras_1/src/online/: online_net5.h5
RLNodes/q_matrix/: CMakeLists.txt  Q-Matrix-Records.txt  package.xml
RLNodes/q_matrix/Code/: Bot_4.py  reinf_matrix_4.py  stats.py
descriptions/r2d2_description/: CMakeLists.txt  package.xml
descriptions/r2d2_description/launch/: display.launch  r2d2.launch
descriptions/r2d2_description/media/materials/scripts/: r2d2.material
descriptions/r2d2_description/rviz/: urdf.rviz
descriptions/r2d2_description/urdf/: gazebo.xacro  macro.xacro  material.xacro  r2d2.urdf.xacro
descriptions/r2p2_urdf_model/: CMakeLists.txt  package.xml
descriptions/r2p2_urdf_model/launch/: display.launch  gazebo.launch  gazebo_diffdrive.launch  gazebo_gripper.launch  gazebo_head.launch  gazebo_joints.launch
descriptions/r2p2_urdf_model/urdf/: 1-first.urdf  10-firsttransmission.urdf.xacro  11-limittransmission.urdf.xacro  12-gripper.urdf.xacro  13-diffdrive.urdf.xacro  2-multipleshapes.urdf  3-origins.urdf  4-materials.urdf  5-visual.urdf  6-flexible.urdf  7-physics.urdf  8-macroed.urdf.xacro  9-publishjoints.urdf.xacro
descriptions/robocop_description/: CMakeLists.txt  package.xml
descriptions/robocop_description/launch/: robocop_empty_world.launch  robocop_enclosed.launch  robocop_maze.launch  robocop_racetrack.launch
descriptions/robocop_description/media/materials/scripts/: texture.material
descriptions/robocop_description/media/meshes/: chassis.dae  wheel.dae
descriptions/robocop_description/rviz/: urdf.rviz  urdf2.rviz
descriptions/robocop_description/urdf/: gazebo.xacro  macro.xacro  robocop.gv  robocop.urdf.xacro
descriptions/three_pi_description/rviz/: urdf.rviz
descriptions/three_pi_description/urdf/: plugins_three_pi.xacro
descriptions/three_pi_description_copy/: CMakeLists.txt  package.xml
descriptions/three_pi_description_copy/launch/: three_pi_race_city_copy.launch
descriptions/three_pi_description_copy/urdf/: plugins_three_pi_copy.xacro  sensors_three_pi_copy.xacro  three_pi_copy.urdf.xacro  wheels_three_pi_copy.xacro
plugins/vel_joint_motors/: CMakeLists.txt
simulations/move_turtlebot_3/: CMakeLists.txt  package.xml
simulations/move_turtlebot_3/launch/: drivebot.launch
simulations/move_turtlebot_3/src/: drivebot.cpp
simulations/pololu_rl/: CMakeLists.txt  package.xml
simulations/pololu_rl/include/pololu_rl/: BotController.hpp  BotImageHandler.hpp  BotPoseHandler.hpp  BotSpeedHandler.hpp
simulations/pololu_rl/launch/: pololu_empty.launch  pololu_race.launch
simulations/pololu_rl/src/: BotController.cpp  BotImageHandler.cpp  BotPoseHandler.cpp  BotSpeedHandler.cpp  pololu_rl_node.cpp
simulations/robocop_controller/: CMakeLists.txt  package.xml
simulations/robocop_controller/include/robocop_controller/: RobocopController.hpp
simulations/robocop_controller/launch/: robocop_control.launch
simulations/robocop_controller/src/: RobocopController.cpp  robocop_controller_node.cpp
simulations/robocop_racetrack/: CMakeLists.txt  package.xml
simulations/robocop_racetrack/include/robocop_racetrack/: RobocopRacetrack.hpp
simulations/robocop_racetrack/launch/: robocop_racetrack.launch
simulations/robocop_racetrack/src/: RobocopRacetrack.cpp  hsv_calc.py  robocop_racetrack_node.cpp
worlds/race_city/models/bus/: model.sdf
worlds/race_city/models/coke_can/: model.sdf
worlds/race_city/worlds/: race_city.world  race_city_copy.world
