<?xml version="1.0" ?>
<package format="2">
  <name>r2d2_description</name>
  <version>0.0.0</version>
  <description>The r2d2_description package</description>
  <maintainer email="kola@todo.todo">kola</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <export></export>
</package>