<?xml version="1.0" ?>
<package format="2">
  <name>robocop_description</name>
  <version>0.0.0</version>
  <description>The robocop_description package</description>
  <maintainer email="kola@todo.todo">kola</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <exec_depend>gazebo_ros</exec_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}" />
  </export>
</package>